Prototype behaviour for navbar using flask_nav

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,6 +29,7 @@
             </a>
         </div>
     </header>
+    {{ nav.navbar.render() }}
 
     <div class="profile">
         <div id="profile-picture" class="profile-picture">
