Create and style dynamic navbar

--- a/app/templates/experience.html
+++ b/app/templates/experience.html
@@ -5,7 +5,7 @@
     <title>work experience</title>
 </head>
 <body>
-    {{ nav.navbar.render() }}
+    {{ nav.navigation.render(renderer='navbar') }}
     {% for job in jobs %}
         <h1>{{ job.title }}</h1>
         <p>{{ job.description }}</p>
