--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,16 +20,7 @@
 </head>
 
 <body>
-    <header class="nav-bar">
-        <div class="nav-content">
-            <a href="/">
-                <div class="nav-logo">
-                    <img src="./static/img/logo.svg" />
-                </div>
-            </a>
-        </div>
-    </header>
-    {{ nav.navbar.render() }}
+    {{ nav.navigation.render(renderer='navbar') }}
 
     <div class="profile">
         <div id="profile-picture" class="profile-picture">
