--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- navabar -->
     {{ nav.navigation.render(renderer='navbar') }}
 
     <div class="profile">
@@ -28,5 +29,41 @@
         </div>
         <h1>{{ title }}</h1>
     </div>
+
+     <!-- columns/About us section -->
+    <section class="about" id="about">
+        <div class="groupmate">
+            <div class="blurb"> 
+                <h3>Emily</h3>
+                <img src="igua.jpeg">
+                <p>She sat down with her notebook in her hand, her mind wandering to faraway places. 
+                    She paused and considered all that had happened. 
+                    It hadn't gone as expected. 
+                    When the day began she thought it was going to be a bad one, 
+                    but as she sat recalling the day's events to write them down, 
+                    she had to admit, it had been a rather marvelous day.</p>
+            </div>
+
+            <div class="blurb">
+                <h3>Jane</h3>
+                <p>image</p>
+                <p>She had been told time and time again that the most important steps were the first and the last. 
+                    It was something that she carried within her in everything she did, but then he showed up and disrupted everything. 
+                    He told her that she had it wrong. 
+                    The first step wasn't the most important. The last step wasn't the most important. 
+                    It was the next step that was the most important.</p>
+            </div>
+
+            <div class="blurb">
+                <h3>Brandon</h3>
+                <p>image</p>
+                <p>"It's never good to give them details," Janice told her sister. "Always be a little vague and keep them guessing." 
+                    Her sister listened intently and nodded in agreement. 
+                    She didn't fully understand what her sister was saying but that didn't matter. 
+                    She loved her so much that she would have agreed to whatever came out of her mouth.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
