--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
         <div class="groupmate">
             <div class="blurb"> 
                 <h3>Emily</h3>
-                <img src="igua.jpeg">
+                <img src="">
                 <p>She sat down with her notebook in her hand, her mind wandering to faraway places. 
                     She paused and considered all that had happened. 
                     It hadn't gone as expected. 
@@ -46,7 +46,7 @@
 
             <div class="blurb">
                 <h3>Jane</h3>
-                <p>image</p>
+                <img src="">
                 <p>She had been told time and time again that the most important steps were the first and the last. 
                     It was something that she carried within her in everything she did, but then he showed up and disrupted everything. 
                     He told her that she had it wrong. 
@@ -56,7 +56,7 @@
 
             <div class="blurb">
                 <h3>Brandon</h3>
-                <p>image</p>
+                <img src="">
                 <p>"It's never good to give them details," Janice told her sister. "Always be a little vague and keep them guessing." 
                     Her sister listened intently and nodded in agreement. 
                     She didn't fully understand what her sister was saying but that didn't matter. 
