--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2,6 +2,13 @@ p, h1, h2, h3, h4, h5, h6, button {
     font-family: "Roboto", serif;
 }
 
+html{
+    background-color: white;
+    margin: 0px;
+    padding: 0px;
+}
+
+
 body {
     background-color: #f5f5f9;
     background-size: cover;
@@ -108,16 +115,8 @@ body {
     font-weight: 700;
 }
 
-html{
-    background-color: white;
-    margin: 0px;
-    padding: 0px;
-}
-
-body{
-    background-color:white;
-    margin: 0px;
-    padding: 0px;
+img{
+    border-radius: 50%;
 }
 
 .about{
@@ -137,10 +136,7 @@ body{
     font-family: Lato, sans-serif;
 }
 
-img{
-    border-radius: 50%;
-}
-
+/* for the three columns */
 @media (min-width: 1150px){
     .groupmate{
         display: flex;
