added links to github and linkedin

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!-- navabar -->
+    <!-- Navbar -->
     {{ nav.navigation.render(renderer='navbar') }}
 
     <div class="profile">
@@ -30,12 +30,26 @@
         <h1>{{ title }}</h1>
     </div>
 
-     <!-- columns/About us section -->
+     <!-- Columns/About us section -->
     <section class="about" id="about">
-        <div class="groupmate">
-            <div class="blurb"> 
+        <div class="about-groupmate">
+            <div class="about-blurb"> 
                 <h3>Emily</h3>
-                <img src="">
+                <!-- image/avatar of yourself -->
+                <img src="./static/img/">
+                
+                <!-- links to socials -->
+                <div>
+                    <a href="">
+                        <img src="./static/img/github.png">
+                    </a>
+
+                    <a href="">
+                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                    </a>
+                </div>
+
+                <!-- actual paragraph about you -->
                 <p>She sat down with her notebook in her hand, her mind wandering to faraway places. 
                     She paused and considered all that had happened. 
                     It hadn't gone as expected. 
@@ -44,9 +58,20 @@
                     she had to admit, it had been a rather marvelous day.</p>
             </div>
 
-            <div class="blurb">
+            <div class="about-blurb">
                 <h3>Jane</h3>
-                <img src="">
+                <img src="./static/img/">
+                
+                <div>
+                    <a href="">
+                        <img src="./static/img/github.png">
+                    </a>
+
+                    <a href="">
+                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                    </a>
+                </div>
+                
                 <p>She had been told time and time again that the most important steps were the first and the last. 
                     It was something that she carried within her in everything she did, but then he showed up and disrupted everything. 
                     He told her that she had it wrong. 
@@ -54,9 +79,20 @@
                     It was the next step that was the most important.</p>
             </div>
 
-            <div class="blurb">
+            <div class="about-blurb">
                 <h3>Brandon</h3>
-                <img src="">
+                <img src="./static/img/">
+
+                <div>
+                    <a href="https://github.com/BrandonSomoza">
+                        <img src="./static/img/github.png">
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/brandonsomoza/">
+                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                    </a>
+                </div>
+
                 <p>"It's never good to give them details," Janice told her sister. "Always be a little vague and keep them guessing." 
                     Her sister listened intently and nodded in agreement. 
                     She didn't fully understand what her sister was saying but that didn't matter. 
