--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -115,37 +115,37 @@ body {
     font-weight: 700;
 }
 
-img{
-    border-radius: 50%;
-}
-
 .about{
     margin: 0px;
     width: 100%;
     color: black;
 }
 
-.groupmate{
+.about-groupmate{
     text-align: center;
     max-width: 500px;
     margin: 0 auto;
 }
 
-.blurb{
+.about-blurb{
     min-width: 300px;
     font-family: Lato, sans-serif;
 }
 
+.about-img{
+    border-radius: 50%;
+}
+
 /* for the three columns */
 @media (min-width: 1150px){
-    .groupmate{
+    .about-groupmate{
         display: flex;
         max-width: 1100px;
         margin: 0 auto;
         text-align: left;
     }
 
-    .blurb + .blurb{
+    .about-blurb + .about-blurb{
         margin-left: 5em;
     }
 }
