Shortened resource URLs

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,8 +14,8 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-    <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
-    <link rel='icon' href='./static/img/favicon.ico' type='image/x-icon' />
+    <link lang='sass' rel="stylesheet" href="static/styles/main.css">
+    <link rel='icon' href='static/img/favicon.ico' type='image/x-icon' />
     <title>{{ title }}</title>
 </head>
 
@@ -25,7 +25,7 @@
 
     <div class="profile">
         <div id="profile-picture" class="profile-picture">
-            <img src="./static/img/logo.jpg">
+            <img src="static/img/logo.jpg">
         </div>
         <h1>{{ title }}</h1>
     </div>
@@ -36,16 +36,16 @@
             <div class="about-blurb"> 
                 <h3>Emily</h3>
                 <!-- image/avatar of yourself -->
-                <img src="./static/img/">
+                <img src="static/img/">
                 
                 <!-- links to socials -->
                 <div>
                     <a href="">
-                        <img src="./static/img/github.png">
+                        <img src="static/img/github.png">
                     </a>
 
                     <a href="">
-                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%", height="12%">
                     </a>
                 </div>
 
@@ -60,15 +60,15 @@
 
             <div class="about-blurb">
                 <h3>Jane</h3>
-                <img src="./static/img/">
+                <img src="static/img/">
                 
                 <div>
                     <a href="">
-                        <img src="./static/img/github.png">
+                        <img src="static/img/github.png">
                     </a>
 
                     <a href="">
-                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%", height="12%">
                     </a>
                 </div>
                 
@@ -81,15 +81,15 @@
 
             <div class="about-blurb">
                 <h3>Brandon</h3>
-                <img src="./static/img/">
+                <img src="static/img/">
 
                 <div>
                     <a href="https://github.com/BrandonSomoza">
-                        <img src="./static/img/github.png">
+                        <img src="static/img/github.png">
                     </a>
 
                     <a href="https://www.linkedin.com/in/brandonsomoza/">
-                        <img src="./static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%", height="12%">
                     </a>
                 </div>
 
