--- a/app/templates/experience.html
+++ b/app/templates/experience.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>work experience</title>
-</head>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta property="og:title" content="Personal Portfolio">
+        <meta property="og:description" content="My Personal Portfolio">
+        <meta property="og:url" content="{{ url }}">
+    
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet">
+    
+        <link lang='sass' rel="stylesheet" href="static/styles/main.css">
+        <link rel='icon' href='static/img/favicon.ico' type='image/x-icon' />
+        <title>{{ title }}</title>
+    </head>
 <body>
+    <!-- Navbar -->
     {{ nav.navigation.render(renderer='navbar') }}
-    {% for job in jobs %}
-        <h1>{{ job.title }}</h1>
-        <p>{{ job.description }}</p>
-    {% else %}
-        <p>No jobs. Unemployed.</p>
-    {% endfor %}
+
+    <div class="profile">
+        <div id="profile-picture" class="profile-picture">
+            <img src="static/img/logo.jpg">
+        </div>
+        <h1>{{ title }}</h1>
+    </div>
+
+     <!-- Columns/Work Experience section -->
+    <section class="about" id="about">
+        <div class="about-groupmate">
+            <div class="about-blurb"> 
+                <h3>Emily</h3>
+                {% for job in json_data["emily"]["work experience"] %}
+                    <h1>{{ job.title }}</h1>
+                    <p>{{ job.description }}</p>
+                {% else %}
+                    <p>No jobs. Unemployed.</p>
+                {% endfor %}
+            </div>
+
+            <div class="about-blurb">
+                <h3>Jane</h3>
+                {% for job in json_data["jane"]["work experience"] %}
+                    <h1>{{ job.title }}</h1>
+                    <p>{{ job.description }}</p>
+                {% else %}
+                    <p>No jobs. Unemployed.</p>
+                {% endfor %}
+            </div>
+
+            <div class="about-blurb">
+                <h3>Brandon</h3>
+                {% for job in json_data["brandon"]["work experience"] %}
+                    <h1>{{ job.title }}</h1>
+                    <p>{{ job.description }}</p>
+                {% else %}
+                    <p>No jobs. Unemployed.</p>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
 </body>
 </html>
