--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2,7 +2,7 @@ p, h1, h2, h3, h4, h5, h6, button {
     font-family: "Roboto", serif;
 }
 
-html{
+html {
     background-color: white;
     margin: 0px;
     padding: 0px;
@@ -16,6 +16,16 @@ body {
     overflow-x: hidden;
     font-family: "Roboto", serif;
     margin: 0px;
+}
+
+#travel-map {
+    height: 500px;
+    text-align: center;
+}
+
+#travel-map iframe {
+    width:100%;
+    height:100%;
 }
 
 .nav-bar {
@@ -115,37 +125,37 @@ body {
     font-weight: 700;
 }
 
-.about{
+.about {
     margin: 0px;
     width: 100%;
     color: black;
 }
 
-.about-groupmate{
+.about-groupmate {
     text-align: center;
     max-width: 500px;
     margin: 0 auto;
 }
 
-.about-blurb{
+.about-blurb {
     min-width: 300px;
     font-family: Lato, sans-serif;
 }
 
-.about-img{
+.about-img {
     border-radius: 50%;
 }
 
 /* for the three columns */
-@media (min-width: 1150px){
-    .about-groupmate{
+@media (min-width: 1150px) {
+    .about-groupmate {
         display: flex;
         max-width: 1100px;
         margin: 0 auto;
         text-align: left;
     }
 
-    .about-blurb + .about-blurb{
+    .about-blurb + .about-blurb {
         margin-left: 5em;
     }
 }
