Add education to about us

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,7 @@
                 <h3>Emily</h3>
                 <!-- image/avatar of yourself -->
                 <img src="static/img/">
+                <p class="education">Degree at University</p>
                 
                 <!-- links to socials -->
                 <div>
@@ -45,7 +46,7 @@
                     </a>
 
                     <a href="">
-                        <img src="static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%" height="12%">
                     </a>
                 </div>
 
@@ -61,14 +62,14 @@
             <div class="about-blurb">
                 <h3>Jane</h3>
                 <img src="static/img/">
-                
+                <p class="education">Degree at University</p>
                 <div>
                     <a href="">
                         <img src="static/img/github.png">
                     </a>
 
                     <a href="">
-                        <img src="static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%" height="12%">
                     </a>
                 </div>
                 
@@ -82,6 +83,7 @@
             <div class="about-blurb">
                 <h3>Brandon</h3>
                 <img src="static/img/">
+                <p class="education">Degree at University</p>
 
                 <div>
                     <a href="https://github.com/BrandonSomoza">
@@ -89,7 +91,7 @@
                     </a>
 
                     <a href="https://www.linkedin.com/in/brandonsomoza/">
-                        <img src="static/img/linkedin.png" width="12%", height="12%">
+                        <img src="static/img/linkedin.png" width="12%" height="12%">
                     </a>
                 </div>
 
