--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,12 +27,12 @@
                 
                 <!-- links to socials -->
                 <div>
-                    <a href="">
-                        <img src="static/img/github.png">
+                    <a class="social-link" href="">
+                        <i class="fa-brands fa-github"></i>
                     </a>
 
-                    <a href="">
-                        <img src="static/img/linkedin.png" width="12%" height="12%">
+                    <a class="social-link" href="">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
 
@@ -49,13 +49,15 @@
                 <h3>Jane</h3>
                 <img src="static/img/">
                 <p class="education">Degree at University</p>
+
+                <!-- links to socials -->
                 <div>
-                    <a href="">
-                        <img src="static/img/github.png">
+                    <a class="social-link" href="">
+                        <i class="fa-brands fa-github"></i>
                     </a>
 
-                    <a href="">
-                        <img src="static/img/linkedin.png" width="12%" height="12%">
+                    <a class="social-link" href="">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
                 
@@ -71,13 +73,14 @@
                 <img src="static/img/">
                 <p class="education">Degree at University</p>
 
+                <!-- links to socials -->
                 <div>
-                    <a href="https://github.com/BrandonSomoza">
-                        <img src="static/img/github.png">
+                    <a class="social-link" href="https://github.com/BrandonSomoza">
+                        <i class="fa-brands fa-github"></i>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/brandonsomoza/">
-                        <img src="static/img/linkedin.png" width="12%" height="12%">
+                    <a class="social-link" href="https://www.linkedin.com/in/brandonsomoza/">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
 
