--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,23 +1,26 @@
-p, h1, h2, h3, h4, h5, h6, button {
-    font-family: "Roboto", serif;
+p, button {
+    font-family: "Roboto", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat", sans-serif;
 }
 
 html {
     background-color: white;
+    height: 100%;
     margin: 0;
     padding: 0;
-    height: 100%;
 }
-
 
 body {
     background-color: #f5f5f9;
     background-size: cover;
-    width: auto;
-    overflow-x: hidden;
     font-family: "Roboto", serif;
     margin: 0;
     min-height: 100%;
+    overflow-x: hidden;
+    width: auto;
 }
 
 #travel-map {
@@ -26,8 +29,8 @@ body {
 }
 
 #travel-map iframe {
-    width:100%;
-    height:100%;
+    height: 100%;
+    width: 100%;
 }
 
 #map-legend {
@@ -39,25 +42,29 @@ body {
     height: 200px;
 }
 
+.about-paragraph {
+    text-align: justify;
+}
+
 .social-link {
-    text-decoration: none;
     color: black;
     font-size: 24px;
+    text-decoration: none;
 }
 
 .map-label {
     border: 1px solid black;
     border-radius: 20px;
-    margin:5px;
-    padding:5px;
+    margin: 5px;
+    padding: 5px;
 }
 
 .nav-bar {
-    width: 100%;
-    background-color: #1C539F;
+    background-color: #1c539f;
     font-family: "Roboto", serif;
     font-weight: 700 !important;
     padding-top: 10px;
+    width: 100%;
 }
 
 .nav-content .logo-touch-target {
@@ -71,8 +78,8 @@ body {
 }
 
 .nav-logo {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
     width: 100%
 }
@@ -82,20 +89,20 @@ body {
 }
 
 .nav-links {
-    display: flex;
-    margin: auto;
-    justify-content: center;
     align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: auto;
 }
 
 .nav-link {
-    display: flex;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
     align-items: center;
+    color: white;
+    display: flex;
     justify-content: center;
+    padding: 14px 16px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .nav-link:hover {
@@ -104,44 +111,44 @@ body {
 
 .profile {
     background-color: #1d539f !important;
-    text-align: center;
     margin-bottom: 50px;
+    text-align: center;
 }
 
 .profile h1 {
+    color: white;
     font-size: 50px;
     font-weight: 700;
-    color: white;
-    margin-top:0;
-    padding-bottom:20px;
+    margin-top: 0;
+    padding-bottom: 20px;
 }
 
 .profile img {
     border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    max-height: 100%;
+    max-width: 100%;
     padding: 20px;
 }
 
 .profile .profile-picture {
-    margin-bottom: 30px;
     height: 200px;
+    margin-bottom: 30px;
 }
 
 .banner {
-    padding: 20px 0 50px 0;
-    height: 150px;
     background-color: #1d539f;
+    height: 150px;
+    padding: 20px 0 50px 0;
 }
 
 .banner .logo {
-    max-width: 180px;
-    max-height: 60px;
-    width: auto;
     height: auto;
+    max-height: 60px;
+    max-width: 180px;
+    width: auto;
 }
 
 .banner .title {
@@ -151,20 +158,21 @@ body {
 }
 
 .about {
+    color: black;
     margin: 0;
     width: 100%;
-    color: black;
 }
 
 .about-groupmate {
-    text-align: center;
-    max-width: 500px;
     margin: 0 auto;
+    max-width: 500px;
+    text-align: center;
 }
 
 .about-blurb {
-    min-width: 300px;
     font-family: Lato, sans-serif;
+    min-width: 300px;
+    text-align: center;
 }
 
 .about-img {
@@ -175,8 +183,8 @@ body {
 @media (min-width: 1150px) {
     .about-groupmate {
         display: flex;
-        max-width: 1100px;
         margin: 0 auto;
+        max-width: 1100px;
         text-align: left;
     }
 
