--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -180,13 +180,26 @@ body {
     min-width: 300px;
 }
 
+.hobby-blurb {
+    font-family: Lato, sans-serif;
+    min-width: 300px;
+    width: 100%;
+}
+
+.hobby-image {
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 200px;
+    max-width: 100%;
+}
+
 .member-name {
     text-align: center;
 }
 
 .job-block {
-    margin-top: 50px;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .job-title {
