Travel map style changes

--- a/app/templates/hobbies.html
+++ b/app/templates/hobbies.html
@@ -30,7 +30,7 @@
         {% endfor %}
     </div>
     <div id="travel-map">
-        <h1>Where We've Been</h1>
+        <h1 id="travel-title">Where We've Been</h1>
         <div id="map-legend">
             {% for member in json_data.keys() %}
                 <span class="map-label">
