--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -6,6 +6,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat", sans-serif;
 }
 
+i {
+    margin: 5px;
+}
+
 html {
     background-color: white;
     height: 100%;
@@ -26,6 +30,12 @@ body {
 #travel-map {
     height: 500px;
     text-align: center;
+    margin-top: 50px;
+}
+
+#travel-title {
+    font-size: 32px;
+    margin-bottom: 0;
 }
 
 #travel-map iframe {
@@ -56,7 +66,7 @@ body {
     border: 1px solid black;
     border-radius: 20px;
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .nav-bar {
