adding profile pic

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -12,4 +12,7 @@
             {% endfor %}
         </div>
     </div>
+    <div class="hyena">
+        <img src="./static/img/hyena3.webp"/>
+    </div>
 </header>
