--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -70,7 +70,8 @@ body {
 }
 
 .nav-bar {
-    background-color: #1c539f;
+    /* background-color: #1c539f; */
+    background-color:#355E3B;
     font-family: "Roboto", serif;
     font-weight: 700 !important;
     padding-top: 10px;
@@ -116,11 +117,22 @@ body {
 }
 
 .nav-link:hover {
-    background-color: #2570d9;
+    /* background-color: #2570d9; */
+    background-color: #355E3B;
+}
+
+.hyena img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .profile {
-    background-color: #1d539f !important;
+    /* background-color: #1d539f !important; */
+    background-color: #355E3B;
     margin-bottom: 50px;
     text-align: center;
 }
@@ -149,7 +161,8 @@ body {
 }
 
 .banner {
-    background-color: #1d539f;
+    /* background-color: #1d539f; */
+    background-color: #355E3B;
     height: 150px;
     padding: 20px 0 50px 0;
 }
