--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -14,5 +14,5 @@
         rel="stylesheet">
 
     <link lang='sass' rel="stylesheet" href="static/styles/main.css">
-    <link rel='icon' href='static/img/favicon.ico' type='image/x-icon' />
+    <!-- <link rel='icon' href='static/img/favicon.ico' type='image/x-icon' /> -->
     <title>{{ title }}</title>
