--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -70,8 +70,7 @@ body {
 }
 
 .nav-bar {
-    /* background-color: #1c539f; */
-    background-color:#355E3B;
+    background-color: #1c539f;
     font-family: "Roboto", serif;
     font-weight: 700 !important;
     padding-top: 10px;
@@ -117,8 +116,7 @@ body {
 }
 
 .nav-link:hover {
-    /* background-color: #2570d9; */
-    background-color: #355E3B;
+    background-color: #2570d9;
 }
 
 .hyena img{
@@ -131,8 +129,7 @@ body {
 }
 
 .profile {
-    /* background-color: #1d539f !important; */
-    background-color: #355E3B;
+    background-color: #1d539f !important;
     margin-bottom: 50px;
     text-align: center;
 }
@@ -161,8 +158,7 @@ body {
 }
 
 .banner {
-    /* background-color: #1d539f; */
-    background-color: #355E3B;
+    background-color: #1d539f;
     height: 150px;
     padding: 20px 0 50px 0;
 }
