--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -25,10 +25,11 @@ body {
     min-height: 100%;
     overflow-x: hidden;
     width: auto;
+    padding-bottom: 100px;
 }
 
 #travel-map {
-    height: 500px;
+    height: 700px;
     text-align: center;
     margin-top: 50px;
 }
