--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% include "components/header.html" %}
-
 </head>
-
 <body>
 <!-- Navbar -->
 {{ nav.navigation.render(renderer='navbar') }}
 
-
-<!-- Form to create post, TODO make it look decent -->
+<div class="profile">
+    <h1>{{ title }}</h1>
+</div>
 
 <form id="post_form">
     <label for="name">Name:</label>
@@ -28,7 +26,9 @@
 {% for post in posts %}
     <div class="timeline_post">
         <h3 class="post_name">{{ post['name'] }}</h3>
+        <p class="post_email">{{ post['email'] }}</p>
         <p class="post_content">{{ post['content'] }}</p>
+        <p class="post_created_at">{{ post['created_at'] }}</p>
     </div>
 {% else %}
     <p>No posts to display</p>
